# alleleCounter

./: .cookiecutter.json  CONTRIBUTING.rst  README.md  files.txt  nohup.out  noxfile.py  pyproject.toml  run.sh  setup.py
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/alleleCounter/: __main__.py  alleleCounter.py  bamlib.py  cslib.py  parse_args.py
